brot2 (2.0.2~) UNRELEASED; urgency=low

  * Updates to build with gcc 9, libc 2.30, and eoan's mildly-incompatible combination of
  libglibmm, libgtkmm and friends.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 20 Oct 2019 15:43:12 +1300

brot2 (2.0.1) xenial; urgency=low

  * Updates to allow build on xenial and yakkety.
  * Switch off deprecation warning to allow build with libav 7:3.x (Debian
    stretch)

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Fri, 05 Oct 2018 17:56:28 +1300

brot2 (2.0) xenial; urgency=medium

  * GTK UI: tweak fractal/colour menu hotkeys; improve controls window default
  position; add Reset and Fulscreen
  * New feature: Movie mode (only available in GUI); render via brot2cli
    script, libav or to a render farm via GNU parallel.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Wed, 19 Oct 2016 13:27:27 +1300

brot2 (1.2) xenial; urgency=low

  * Add palettes from rjk's and fanf's mandelbrotters
  * Refactor fractal maths machinery to be traits-based, have it auto-select
  between the available types based on zoom depth, make float/double types
  selectable at configure time.
  * Add benchmarker (`make benchmark')
  * Update build machinery for automake 1.15 & gcc 5.3
  * Fix default save directory (LP#1600657)
  * Remember the last directory we saved in (LP#1600568)
  * Apply aspect ratio fix when saving PNG (LP#1600574)
  * Add --hud option to CLI and checkbox to GTK save dialog (LP#1603347)

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 17 Jul 2016 12:47:19 +1200

brot2 (1.1) precise; urgency=low

  * Fix automake machinery so that make dist works again. (Oops!)
  * LP#882411: Create unit test framework.
  * Major rewrite of the fractal plotting machinery, with reasonable unit
  test support (closes #882411).  'make check' added.  Updated CLI and gtkui
  to use new machinery.  Removed old Render and Plot2 as obsolete.